contact form fixed

--- a/env.example
+++ b/env.example
@@ -1,9 +1,10 @@
-# Email Configuration for Contact Form
-# For Gmail, you need to create an App Password: https://support.google.com/accounts/answer/185833
-SMTP_HOST=smtp.gmail.com
-SMTP_PORT=587
-SMTP_USER=your-email@gmail.com
-SMTP_PASS=your-app-password
-SMTP_FROM=noreply@belmare-tavern.com
-CONTACT_EMAIL=belmaretavern@gmail.com
+# EmailJS Configuration
+# Get these values from your EmailJS dashboard (https://dashboard.emailjs.com)
+EMAILJS_SERVICE_ID=astrocode
+EMAILJS_TEMPLATE_ID=template_xt7glh6
+EMAILJS_PUBLIC_KEY=your_public_key
+EMAILJS_PRIVATE_KEY=your_private_key
+
+# Email recipient (optional - defaults to vdrosatos@icloud.com if not set)
+EMAIL_TO_ADDRESS=vdrosatos@icloud.com
 
